[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libhelper"
version = "0.0.1"
authors = [
  { name="Rocco S", email="robotmen13@gmail.com" },
]
description = "A py library helper"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.wheel]
packages = ["src/pycheet"]
packages = ["src/libhelp"]

[project.urls]
Homepage = ""
Issues = ""Homepage = "https://github.com/webro-13/libhelp"
Issues = "https://github.com/webro-13/libhelp/issues"