[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libhelp"
version = "0.0.8"
authors = [
  { name="Rocco S", email="robotmen13@gmail.com" },
]
description = "A Python library helper."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.wheel]
packages = ["src/libhelp"]

[project.urls]
Homepage = "https://github.com/webro-13/libhelp"
Issues = "https://github.com/webro-13/libhelp/issues"